zoom transition mobile fix

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ img {
   transform: scale(8);
   -webkit-transform: scale(8);
   -webkit-filter: blur(2px);
-  transition: transform 4s ease-in-out, -webkit-filter 3s ease-in;
+  transition: transform 4s ease-in-out, -webkit-transform 4s ease-in-out, -webkit-filter 3s ease-in;
 }
 
 .btn {
@@ -31,6 +31,7 @@ img {
 
 .zoom-out{
   transform: scale(1);
+  -webkit-transform: scale(1);
   -webkit-filter: blur(0px);
 }
 
